--- a/scss/_youtube.scss
+++ b/scss/_youtube.scss
@@ -19,7 +19,8 @@
 		// background-position: center center;
 
 		input[type="text"] {
-			width: 600px; height: 50px;
+			width: 600px;
+			height: 50px;
 			padding: 30px;
 			border-radius: 30px;
 			margin-bottom: 120px;
@@ -35,14 +36,14 @@
 			top: 50%;
 			right: 10%;
 			transform: translateY(-50%);
-			
-			li{
+
+			li {
 				float: left;
 				margin-right: 50px;
 				font-size: 30px;
-				color: #fff; 
+				color: #fff;
 
-				&:last-child{
+				&:last-child {
 					margin-right: 0px;
 				}
 			}
@@ -53,25 +54,19 @@
 	// 	background: #111/*#ebebeb*/;
 	// 	margin-bottom: 120px;
 	// 	position: relative;
-		
-		// label{
-		// 	font-size: 40px; color: #fff; 
-		// 	position: absolute;
-		// 	top: 18px;
-		// 	// transform: translateY(-50%);
-		// 	left: 22%;
-		//  }
 
-	
+	// label{
+	// 	font-size: 40px; color: #fff;
+	// 	position: absolute;
+	// 	top: 18px;
+	// 	// transform: translateY(-50%);
+	// 	left: 22%;
+	//  }
+
 	// }
 	.inner {
 		position: relative;
-		// h1 {
-		// 	font: bold 50px/1 "Spartan";
-		// 	margin-bottom: 100px;
-		// 	letter-spacing: 1.5px;
-		// 	color: #333;
-		// }
+
 		.vidGallery2 {
 			width: 100%;
 
@@ -110,10 +105,18 @@
 						color: #777;
 					}
 				}
+				&:hover {
+					a {
+						img {
+							transform: scale(2);
+							filter: grayscale(0);
+						}
+					}
+				}
 				.icon_content {
 					display: inline-block;
 					position: absolute;
-					right: 50px;
+					right: 94px;
 					bottom: 0px;
 
 					> .icon {
@@ -250,7 +253,7 @@
 			thead {
 				tr {
 					border-bottom: 2px solid #444;
-					
+
 					th {
 						&:nth-of-type(1) {
 							font: bold 60px/1 "Spartan";
@@ -290,7 +293,7 @@
 						&:nth-of-type(3) {
 							width: 10%;
 							text-align: right;
-							
+
 							i {
 								padding-right: 30px;
 								font-size: 20px;
