--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -4,164 +4,170 @@
 'Noto Sans KR'
 */
 
-.gallery .inner {
-	width: 100%;
-	padding: 100px;
-	// background: #f8f8f8;
-	position: relative;
-
-	h1 {
-		font: bold 50px/1.5 "Spartan";
-		text-align: left;
-		color: #333;
-		letter-spacing: 1.5px;
-		margin-bottom: 150px;
+.gallery {
+	.sub_visual{
+		background: #111;
 	}
 
-	.loading {
-		width: 100px;
-		height: 100px;
-		position: absolute;
-		top: 300px;
-		left: 50%;
-		transform: translateX(-50%);
-		transition: 0.5s;
-
-		&.off {
-			opacity: 0;
-		}
-	}
-	#searchBox {
-		display: inline-block;
-		position: absolute;
-		top: 150px;
-		left: 50%;
-		transform: translateX(-50%);
-		outline: none;
-
-		input[type="text"] {
-			width: 400px;
-			height: 40px;
-			padding-left: 20px;
-			border: none;
-			font: bold 20px/1 "Spartan";
-			border-bottom: 3px solid #222;
-		}
-		button {
-			display: none;
-		}
-	}
-	.typography {
-		display: inline-block;
-		text-align: right;
-		position: absolute;
-		right: 120px;
-		top: 50px;
-
-		h2 {
-			font: bold 22px/1 "Spartan";
-			color: #222;
-			margin-bottom: 10px;
-		}
-		p {
-			font: 18px/1.7 "Spartan";
-			color: #888;
-		}
-	}
-	#gallery_page {
+	.inner {
 		width: 100%;
-		min-height: 500px;
+		padding: 100px;
+		// background: #f8f8f8;
 		position: relative;
 
-		ul {
-			width: 100%;
+		h1 {
+			font: bold 50px/1.5 'Noto Sans KR';
+			text-align: left;
+			color: #333;
+			letter-spacing: 1.5px;
+			margin-bottom: 150px;
+		}
+
+		.loading {
+			width: 100px;
+			height: 100px;
+			position: absolute;
+			top: 300px;
+			left: 50%;
+			transform: translateX(-50%);
 			transition: 0.5s;
-			transform: translateY(100px);
-			opacity: 0;
 
-			&.on {
-				opacity: 1;
-				transform: translateY(0px);
+			&.off {
+				opacity: 0;
 			}
+		}
+		#searchBox {
+			display: inline-block;
+			position: absolute;
+			top: 150px;
+			left: 50%;
+			transform: translateX(-50%);
+			outline: none;
 
-			&::after {
-				content: "";
-				display: block;
-				clear: both;
+			input[type="text"] {
+				width: 400px;
+				height: 40px;
+				padding-left: 20px;
+				border: none;
+				font: bold 20px/1 'Noto Sans KR';
+				border-bottom: 3px solid #222;
 			}
+			button {
+				display: none;
+			}
+		}
+		.typography {
+			display: inline-block;
+			text-align: right;
+			position: absolute;
+			right: 120px;
+			top: 70px;
 
-			li {
-				width: 50%;
-				float: left;
-				padding: 10px;
+			h2 {
+				font: bold 22px/1 'Noto Sans KR';
+				color: #222;
+				margin-bottom: 10px;
+			}
+			p {
+				font: 18px/1.7 'Noto Sans KR';
+				color: #888;
+			}
+		}
+		#gallery_page {
+			width: 100%;
+			min-height: 500px;
+			position: relative;
 
-				> div {
-					width: 100%;
-					// background: #fff;
-					border: 1px solid #aaa;
-					padding: 40px;
-					position: relative;
-					// box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+			ul {
+				width: 100%;
+				transition: 0.5s;
+				transform: translateY(100px);
+				opacity: 0;
 
-					a {
-						display: inline-block;
+				&.on {
+					opacity: 1;
+					transform: translateY(0px);
+				}
 
-						.thumb {
-							width: 300px;
-							height: 260px;
-							object-fit: cover;
+				&::after {
+					content: "";
+					display: block;
+					clear: both;
+				}
+
+				li {
+					width: 50%;
+					float: left;
+					padding: 10px;
+
+					> div {
+						width: 100%;
+						// background: #fff;
+						border: 1px solid #aaa;
+						padding: 40px;
+						position: relative;
+						// box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+
+						a {
+							display: inline-block;
+
+							.thumb {
+								width: 300px;
+								height: 260px;
+								object-fit: cover;
+							}
 						}
-					}
 
-					.gallery_txt {
-						width: 38%;
-						display: inline-block;
-						position: absolute;
-						top: 55px;
-						right: 5%;
-
-						p {
-							font: bold 23px/1 "Spartan";
-							color: #222;
-							margin-bottom: 20px;
-						}
-						span {
-							width: 100%;
-							font: 15px/1.6 "Spartan";
-							color: #888;
-						}
-					}
-					.btn {
-						&::before {
-							content: "";
-							display: block;
-							width: 90px;
-							height: 2px;
+						.gallery_txt {
+							width: 38%;
+							display: inline-block;
 							position: absolute;
-							bottom: 40px;
-							right: 40px;
-							background: #222;
-						}
-						&::after {
-							content: "";
-							width: 25px;
-							height: 25px;
-							border-top: 2px solid #121212;
-							border-right: 2px solid #121212;
-							display: block;
-							transform: rotate(45deg);
-							position: absolute;
-							bottom: 28px;
-							right: 43px;
-						}
-					}
+							top: 55px;
+							right: 5%;
 
-					// .arrow {
-					// 	// width: 100px;
-					// 	position: absolute;
-					// 	right: 40px;
-					// 	bottom: 55px;
-					// }
+							p {
+								font: bold 23px/1 'Noto Sans KR';
+								color: #222;
+								margin-bottom: 20px;
+							}
+							span {
+								width: 100%;
+								font: 15px/1.6 'Noto Sans KR';
+								color: #888;
+							}
+						}
+						.btn {
+							&::before {
+								content: "";
+								display: block;
+								width: 90px;
+								height: 2px;
+								position: absolute;
+								bottom: 40px;
+								right: 40px;
+								background: #222;
+							}
+							&::after {
+								content: "";
+								width: 25px;
+								height: 25px;
+								border-top: 2px solid #121212;
+								border-right: 2px solid #121212;
+								display: block;
+								transform: rotate(45deg);
+								position: absolute;
+								bottom: 27.5px;
+								right: 43px;
+							}
+						}
+
+						// .arrow {
+						// 	// width: 100px;
+						// 	position: absolute;
+						// 	right: 40px;
+						// 	bottom: 55px;
+						// }
+					}
 				}
 			}
 		}
@@ -206,11 +212,11 @@
 			.gallery_txt {
 				width: 20%;
 
-				p{
+				p {
 					font: bold 15px/1;
 				}
 				span {
-					font : 11px/1;
+					font: 11px/1;
 				}
 			}
 		}
