--- a/scss/_location.scss
+++ b/scss/_location.scss
@@ -16,7 +16,7 @@
 	}
 	.inner {
 		h1 {
-			font: bold 50px/1 "Spartan";
+			font: bold 50px/1 'Noto Sans KR';
 			margin-bottom: 40px;
 			letter-spacing: 1.5px;
 			color: #333;
