--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -51,6 +51,7 @@
 				border: none;
 				font: bold 20px/1 'Noto Sans KR';
 				border-bottom: 3px solid #222;
+				outline: none;
 			}
 			button {
 				display: none;
