--- a/scss/style.scss
+++ b/scss/style.scss
@@ -258,25 +258,27 @@ $mobile: 539px;
 #visual {
 	width: 100%;
 	height: calc(100vh - 100px);
-	position: relative;
+	background: url(../img/main2.jpg) no-repeat center/cover;
 	overflow: hidden;
+	position: relative;
 
 
 	.txt {
 		width: 60%;
 		position: absolute;
-		top: 25%;
+		top: 55%;
 		left: 5%;
 		z-index: 2;
 
 		h1 {
 			font: 300 100px/1 "Spartan";
-			color: #111;
+			color: #fff;
 			margin-bottom: 30px;
 		}
 		p {
-			font:  35px/1.5 "Spartan";
-			color: #111;
+			font:  33px/1.5 "Spartan";
+			letter-spacing: 1.5px;
+			color: #fff;
 			margin-bottom: 70px;
 		}
 		a{
@@ -384,10 +386,10 @@ $mobile: 539px;
 #popup {
 	width: 400px;
 	height: 300px;
-	background: rgb(237, 214, 218);
+	background: #fff;
 	padding: 20px;
 	box-sizing: border-box;
-	color: #fff;
+	color: #111;
 	position: absolute;
 	top: 100px;
 	right: 10%;
@@ -396,18 +398,19 @@ $mobile: 539px;
 	.pop_inner {
 		width: 100%;
 		height: 100%;
-		border: 2px solid #fff;
+		border: 2px solid #111;
 		padding: 40px;
 
 		h1 {
 			text-align: center;
-			font: bold 30px/1 "Spartan";
+			font: bold 30px/1 'Noto Sans KR';
 		}
 
 		.pop_content {
 			width: 100%;
 			min-height: 150px;
-			padding-top: 30px;
+			padding-top: 50px;
+			text-align: center;
 		}
 		&::after {
 			content: "";
@@ -418,14 +421,14 @@ $mobile: 539px;
 			float: left;
 
 			label {
-				font: bold 13px/1 "Spartan";
+				font: bold 13px/1 'Noto Sans KR';
 				margin-left: 4px;
 			}
 		}
 		.close {
 			float: right;
-			font: 14px/1 "Spartan";
-			color: #fff;
+			font: 14px/1 'Noto Sans KR';
+			color: #111;
 		}
 	}
 }
