--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,85 +300,25 @@ $mobile: 539px;
 				top: 50%;
 				transform: translateY(-50%);
 
-			}
-			                                       
-			
+			}		
 		}
 	}
-
-	#slider {
-		width: 60%;
-		height: 100%;
+	.visual_box {
+		width: 700px;
+		height: 250px;
+		background: #fff;
 		position: absolute;
-		right: 0%;
-		top: 50%;
-		overflow: hidden;
-		transform: skew(-20deg) translateY(-50%);
-
-		.list {
-			width: calc(100% * 4);
-			height: inherit;
-			margin-left: -100%;
-
-			> li {
-				width: calc(100% / 4);
-				height: inherit;
-				float: left;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-
-				&[data-index="1"] {
-					// background-image: url(../img/p1.jpg);
-					background: rgb(156, 198, 237);
-					background-size: cover;
-					background-position: center;
-					background-repeat: no-repeat;
-				}
-				&[data-index="2"] {
-					// background-image: url(../img/p4.jpg);
-					background: rgb(255, 218, 223);
-					background-size: cover;
-					background-position: center;
-					background-repeat: no-repeat;
-				}
-				&[data-index="3"] {
-					// background-image: url(../img/p2.jpg);
-					background: rgb(255, 238, 168);
-					background-size: cover;
-					background-position: center;
-					background-repeat: no-repeat;
-				}
-				&[data-index="4"] {
-					// background-image: url(../img/p4.jpg);
-					background: rgb(179, 255, 194);
-					background-size: cover;
-					background-position: center;
-					background-repeat: no-repeat;
-				}
-			}
+		bottom: 0;
+		right: 0;
+		h2 {
+			font: bold 27px/1.3 "Spartan";
+			margin-top: 50px; margin-left: 100px;
 		}
-	}
-	.btns_inner {
-		width: 100%;
-		margin: 0 auto;
-
-		// .prev {
-		// 	display: inline-block;
-		// 	font-size: 80px; color: #fff;
-		// 	position: absolute;
-		// 	top: 50%;
-		// 	left: 5%;
-
-		// }
-		.next {
-			display: inline-block;
-			font-size: 80px;
-			color: #fff;
-			position: absolute;
-			top: 50%;
-			right: 5%;
-			transform: translateY(-50%);
+		input[type="text"]{
+			width: 350px;
+			margin-left: 100px; margin-top: 30px;
+			border: none;
+			border-bottom: 4px solid #111;
 		}
 	}
 }
